dataset1235/2025-2/610742602/users/2070606917/executions/677928262_775838323.log
== SUBMISSION (2025-08-28 17:45:50)
-- CODE: 
x1 = 4
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:45:49)
-- CODE: 
x1 = 4
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:45:58)
-- CODE: 
x1 = 4
print (x4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (x4)
           ^^
NameError: name 'x4' is not defined. Did you mean: 'x1'?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (x4)
           ^^
NameError: name 'x4' is not defined. Did you mean: 'x1'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:45:39)
-- CODE: 
x1 = 4
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:45:41)
-- CODE: 
x1 = 4
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:46:14)
-- CODE: 
x1 = 4.0
print (x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 17:46:13)
-- CODE: 
x1 = 4.0
print (x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
